--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -17,3 +17,51 @@
 .missionListHeader {
   display:flex;
 }
+
+.gameControlButton {
+  width:150px;
+  height:40px;
+  margin-left:4px;
+  border-color: white;
+  border-radius: 0;
+  color: black;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  transition: color 150ms ease-in-out;
+}
+
+.gameControlButton:after {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 100%;
+    background: #030244;
+    z-index: -1;
+    transition: width 150ms ease-in-out;
+}
+
+.gameControlButton:hover {
+  color: #fff;
+}
+
+.gameControlButton:hover:after {
+  width: 110%;
+}
+
+
+.warningButton:after {
+    background: red;
+}
+
+.tabPanelButtonArea {
+  margin-bottom:10px;
+}
+
+a {
+  color:white;
+}
