--- a/src/home/components/MissionGroups.css
+++ b/src/home/components/MissionGroups.css
@@ -8,9 +8,10 @@
 }
 
 .missionGroupPoints {
-  width:60%;
+  width:80%;
   margin-inline: auto;
   margin-bottom:5px;
+  text-align: center;
 }
 
 .missionNowPoint {
