--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,5 +1,6 @@
 body {
   background-color: #030244;
+  background-image: url("/public/images/tile_background.png");
   color:white;
 }
 .mainContainer {
@@ -8,7 +9,7 @@ body {
 
 .SubTitleLabel {
   padding:0px 10px;
-  background-color:#bea155;
+  background-color:#DABE00;
   color:#222;
 }
 
