--- a/src/mission/components/css/Choice.css
+++ b/src/mission/components/css/Choice.css
@@ -1,15 +1,8 @@
 .choiceInput {
   width:90%;
-  margin:auto;
-  display:flex;
+  display: grid;
+  grid-template-rows: 150px 150px;
+  grid-template-columns: 150px 150px;
   justify-content: center;
-  text-align: center;
-}
-
-.choiceInput button {
-  width:120px;
-  height:120px;
-  margin:10px 10px 10px 10px;
-  font-size:6em;
-  text-align: center;
+  margin: 0 auto;
 }
