--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,6 +1,6 @@
 body {
   background-color: #030244;
-  background-image: url("/public/images/tile_background.png");
+  background-image: url("/public/images/tile_background_new.png");
   color:white;
 }
 .mainContainer {
@@ -11,5 +11,21 @@ body {
   padding:0px 10px;
   background-color:#DABE00;
   color:#222;
+  text-align: center;
 }
 
+#homeCartain {
+  width:100%;
+  position: fixed;
+  position: absolute;
+  z-index:999;
+  margin-top:-30px;
+  pointer-events: none;
+}
+
+@media screen and (min-width:1024px) {
+  /*　画面サイズが1024pxからはここを読み込む　*/
+  #homeCartain {
+    display:none;
+  }
+}
