--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dispMessageContainer {
+  width:80%;
+  display:flex;
+  justify-content: center;
+  margin:20px auto;
+  padding: 20px;
+  border:1px solid #DABE00;
+}
