ミッションに拡張テキストをもたせた。チュートリアルから遷移しないバグFix

--- a/src/mission/Mission.css
+++ b/src/mission/Mission.css
@@ -52,6 +52,17 @@
   height:280px;
 }
 
+.missionExtraContainer {
+  margin:10px;
+  display: flex;
+}
+
+.missionExtraValue {
+  margin:auto;
+  margin-top:5px;
+  font-size:1.2em;
+}
+
 .backButton {
   width:80px;
   height:40px;
