--- a/src/home/home.css
+++ b/src/home/home.css
@@ -8,7 +8,7 @@ body {
 }
 
 .SubTitleLabel {
-  padding:0px 10px;
+  padding:7.5px;
   background-color:#DABE00;
   color:#222;
   text-align: center;
