--- a/src/home/components/MissionGroups.css
+++ b/src/home/components/MissionGroups.css
@@ -12,6 +12,7 @@
   margin-inline: auto;
   margin-bottom:5px;
   text-align: center;
+  position: relative;
 }
 
 .missionNowPoint {
@@ -19,5 +20,8 @@
 }
 
 .missionNextPoint{
-  margin:20px;
+  position: absolute;
+  top:34px;
+  left:60%;
+  margin-right:-20px;
 }
