--- a/src/home/home.css
+++ b/src/home/home.css
@@ -14,6 +14,28 @@ body {
   text-align: center;
 }
 
+.heading07 {
+	position: relative;
+	padding-top: 15px;
+  text-align: center;
+  font-size:1.3em;
+  margin-top:30px;
+}
+
+.heading07::before {
+	content: attr(data-en);
+	position: absolute;
+	transform: rotate(-8deg);
+	top: -8px;
+  width:100px;
+  left:50%;
+  margin-left: -110px;
+	color: #DABE00;
+	font-weight: 400;
+  font-family: 'Allura', cursive;
+	font-style: italic;
+}
+
 #homeCartain {
   width:100%;
   position: fixed;
@@ -28,4 +50,8 @@ body {
   #homeCartain {
     display:none;
   }
+}
+
+.smallFont {
+  font-size:0.75em;
 }
