--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Noto+Sans+JP:wght@300;400&display=swap');
 
 body {
   margin: 0;
@@ -14,6 +14,7 @@ code {
     monospace;
 }
 
+
 .dispMessageContainer {
   width:80%;
   display:flex;
@@ -22,3 +23,11 @@ code {
   padding: 20px;
   border:1px solid #DABE00;
 }
+
+.loading {
+    display: flex;
+    height: 600px;
+    flex-flow: wrap;
+    justify-content: space-around;
+    align-items: center;
+  }
