--- a/src/home/components/Header.css
+++ b/src/home/components/Header.css
@@ -22,3 +22,10 @@
   display: block;
   margin:15px auto;
 }
+
+@media screen and (min-width:1024px) {
+  /*　画面サイズが1024pxからはここを読み込む　*/
+  #headerDeco {
+    display:none;
+  }
+}
